karl package Changelog
======================

Unreleased
----------

- Migrate admin section to ux2 (LP #1043537).

- Avoid error when reference manual marker is removed from a folder and an
  intranet layout is used. (LP #1059559)

- Fixed word wrap problem in recent activity portlet. (LP #1057065)

- Removed intranets link from global nav and made logo link to that when
  inside an intranet.

3.100 (2012-11-15)
------------------

- Fix the Add / Edit Event forms, to show the All Day checkbox in ux2. (LP #1060342)

- Fix the position of the option panel in the UX2 wiki index (LP #1057067)

- Implement left-right chevrons in the option panel toggle button 
  in the UX2 wiki index (LP #1057067)

- karl.wikitoc.js is now forked to two separate copies for ux1 and ux2
  (just like all other js, in accordance with our best practice)

3.99 (2012-11-08)
-----------------

- Add optional integration with Velruse for single sign on.

- Implement localized dates for ux2. (LP #1051005)

- Cleaned up the LESS files and changed the width to 950-or-so pixels. 
  (LP #1044077)

- Changed text conversion error into warning to avoid triggering monitor.
  (LP #1035308)

- Fixed date formats (EU / US) in the profile page, in the Created
  column of the Content Added Recently grid. (LP #1057068)

- Fixed event portlet styles on intranets.

- Removed responsive design

- in the ux2 content feeds filter box, make the green button work correctly on IE8.
  Also, adjust the green button's position and height to look nice
  on all browsers. (LP #1050493)

- Fix livesearch results formatting in ux2, which became messed up
  because the css loading sequence has changed. (LP #1067878)

3.98 (2012-09-26)
-----------------

- Fixed link to edit profiles in admin profile view (LP #1042318).

- Switched global notification background and text color (LP #1050965)

- Indented profile info on ux2 (LP #1050067)

- improve chatter messages view and fix messages pulldown view link.
